--- a/Application/assets/css/index.css
+++ b/Application/assets/css/index.css
@@ -6,7 +6,12 @@
   right: 15px;
   margin-top: -185px;
 }
-input, button.btn{
+.well.card input.form-control,
+.well.card button.btn,
+.well.card a.btn{
     margin: 10px 0;
-    
+}
+.well.card .btn{
+    max-width: 49%;
+    display: inline-block;
 }
